@@ -22,11 +22,8 @@ import tec.uom.se.unit.Units;
 public class VariableTest {
   private static final Logger LOGGER = Logger.getLogger(Variables.class.getName());
 
-  private VariableTest() {
-  }
-
   @Test
-  public static void testGetUnit() {
+  public void testGetUnit() {
     Variable<ADCVariable> variable = new Variable<>() {
       @Override
       public String name() {
@@ -44,16 +41,16 @@ public class VariableTest {
       }
     };
     Assert.assertEquals(variable.getUnit(), AbstractUnit.ONE);
-    Assert.assertEqualsDeep(variable.options(), Collections.singleton(Variable.Option.VISIBLE), variable.name());
+    Assert.assertEquals(variable.options(), Collections.singleton(Variable.Option.VISIBLE), variable.name());
   }
 
   @Test
-  public static void testGetDependentUnit() {
+  public void testGetDependentUnit() {
     Assert.assertEquals(OperatorVariables2.OUT.getUnit(), AbstractUnit.ONE);
   }
 
   @Test(expectedExceptions = IllegalArgumentException.class, expectedExceptionsMessageRegExp = ".*No enum constant.*InvalidName")
-  public static void testInvalidGetVariables() {
+  public void testInvalidGetVariables() {
     DependentVariable<OperatorVariables, ADCVariable> variable = new DependentVariable<>() {
       @Nonnull
       @Override
@@ -82,7 +79,7 @@ public class VariableTest {
   }
 
   @Test
-  public static void testVisibleProperty() {
+  public void testVisibleProperty() {
     Assert.assertTrue(SingleVariables.E1.options().contains(Variable.Option.VISIBLE));
     Assert.assertTrue(OperatorVariables.OUT_PLUS.options().contains(Variable.Option.VISIBLE));
     Assert.assertEquals(OperatorVariables.OUT_PLUS.indexBy(Variable.Option.VISIBLE), 0);
@@ -92,11 +89,11 @@ public class VariableTest {
     Assert.assertEquals(OperatorVariables.OUT_DIV.indexBy(Variable.Option.VISIBLE), 1);
 
     EnumSet.allOf(OperatorVariables2.class).forEach(v ->
-        Assert.assertEqualsDeep(v.options(), EnumSet.of(Variable.Option.VISIBLE, Variable.Option.TEXT_VALUE_BANNER), Variables.toName(v)));
+        Assert.assertEquals(v.options(), EnumSet.of(Variable.Option.VISIBLE, Variable.Option.TEXT_VALUE_BANNER), Variables.toName(v)));
   }
 
   @Test
-  public static void testToString() {
+  public void testToString() {
     String adc = Variables.toString(ADCVariable.ADC, 10000);
     Assert.assertTrue(adc.startsWith("ADC = "), adc);
     Assert.assertTrue(adc.endsWith(String.format(Locale.getDefault(), "%,d one", 10000)), adc);
@@ -121,7 +118,7 @@ public class VariableTest {
   }
 
   @Test
-  public static void testToName() {
+  public void testToName() {
     Assert.assertTrue(Variables.toName(ADCVariable.ADC).startsWith("ADC, "));
   }
 
@@ -130,22 +127,22 @@ public class VariableTest {
     return new Object[][] {
         {1234, MetricPrefix.CENTI(Units.HERTZ), 1, String.format(Locale.getDefault(), "%,.2f Hz", 12.34)},
         {-1234, MetricPrefix.CENTI(Units.HERTZ), 10, String.format(Locale.getDefault(), "%,.1f Hz", -12.3)},
-        {1234, MetricPrefix.CENTI(Units.HERTZ), 100, String.format("%.0f Hz", 12.0)},
+        {1234, MetricPrefix.CENTI(Units.HERTZ), 100, "%.0f Hz".formatted(12.0)},
         {-1234, Units.HERTZ, 1, String.format(Locale.getDefault(), "%,.3f kHz", -1.234)},
         {1234, Units.HERTZ, 10, String.format(Locale.getDefault(), "%,.2f kHz", 1.23)},
         {-1234, Units.HERTZ, 100, String.format(Locale.getDefault(), "%,.1f kHz", -1.2)},
-        {1234, Units.HERTZ, 1000, String.format("%.0f kHz", 1.0)},
-        {-123, Units.HERTZ, 1, String.format("%.0f Hz", -123.0)},
+        {1234, Units.HERTZ, 1000, "%.0f kHz".formatted(1.0)},
+        {-123, Units.HERTZ, 1, "%.0f Hz".formatted(-123.0)},
         {-3140, Units.VOLT, 1, String.format(Locale.getDefault(), "%,.2f kV", -3.14)},
         {3100, Units.VOLT, 1, String.format(Locale.getDefault(), "%,.1f kV", 3.1)},
-        {-3000, Units.VOLT, 1, String.format("%.0f kV", -3.0)},
-        {0, Units.VOLT, 1, String.format("%.0f V", 0.0)},
-        {0, Units.VOLT, 1000, String.format("%.0f kV", 0.0)}
+        {-3000, Units.VOLT, 1, "%.0f kV".formatted(-3.0)},
+        {0, Units.VOLT, 1, "%.0f V".formatted(0.0)},
+        {0, Units.VOLT, 1000, "%.0f kV".formatted(0.0)}
     };
   }
 
   @Test(dataProvider = "formatValues")
-  public static void testFormatValues(int value, @Nonnull Unit<?> unit, @Nonnegative int scaleFactor10, @Nonnull String expected) {
+  public void testFormatValues(int value, @Nonnull Unit<?> unit, @Nonnegative int scaleFactor10, @Nonnull String expected) {
     Assert.assertEquals(Variables.toString(value, unit, scaleFactor10), expected);
   }
 }
