@@ -118,7 +118,7 @@ public class OptimumStoLTest {
     DoubleStream.of(1.0 / 3.0, 0.5, 2.0 / 3.0).forEachOrdered(sToL -> LineFileBuilder.of("%.4f %.6f %.6f").
         xRange(1.0e-4, 1.0e-1, 1.0e-4).
         yRange(1.0e-6, 1.0e-3, 1.0e-6).
-        generate(String.format("Rho_ErrorsAt_%.2f.txt", sToL),
+        generate("Rho_ErrorsAt_%.2f.txt".formatted(sToL),
             (dL2L, dRL2rho) -> new InequalityRho(dL2L, dRL2rho).applyAsDouble(sToL)));
   }
 
@@ -137,7 +137,7 @@ public class OptimumStoLTest {
     DoubleStream.of(1.0 / 3.0, 0.5, 2.0 / 3.0).forEachOrdered(sToL -> LineFileBuilder.of("%.4f %.4f %.6f").
         xRange(1.0e-4, 1.0e-1, 1.0e-4).
         yRange(1.0e-4, 1.0e-1, 1.0e-4).
-        generate(String.format("DeltaRho_ErrorsAt_%.2f.txt", sToL),
+        generate("DeltaRho_ErrorsAt_%.2f.txt".formatted(sToL),
             (dL2L, dRL2rho) -> new InequalityDeltaRho(dL2L, dRL2rho).applyAsDouble(sToL)));
   }
 }
